# RaceLogic

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  EXAMPLE.md  README.md  USAGE.md  build.bat  data_structures.md  debug_out.txt  generate_data.py  generate_dummy_data.py  verify_times.py
.agent/workflows/: push_to_github.md
dashboard/: app.js  data.js  index.html  style.css
data/: drivers.txt  ideal_lap_times.txt  race_events.txt  race_events_batch_test.txt  race_events_old.txt
include/: BSTMap.h  Driver.h  DriverRegistry.h  HashMap.h  LinkedList.h  MaxHeap.h  Queue.h  RaceGraph.h  ScoringEngine.h  SeasonManager.h  Vector.h
include/core/: hash_map.hpp  max_heap.hpp  race_simulator.hpp  season_manager.hpp  weighted_graph.hpp
include/models/: car.hpp  driver.hpp  race_result.hpp  track.hpp
include/ui/: race_logic_ui.hpp
race_data_csv/: Abu Dhabi_driver_summary.csv  Abu Dhabi_lap_times.csv  Abu Dhabi_stints.csv  Brazil_driver_summary.csv  Brazil_lap_times.csv  Brazil_stints.csv  Las Vegas_driver_summary.csv  Las Vegas_lap_times.csv  Las Vegas_stints.csv  Mexico_driver_summary.csv  Mexico_lap_times.csv  Mexico_stints.csv  Qatar_driver_summary.csv  Qatar_lap_times.csv  Qatar_stints.csv  drivers.txt  generate_drivers.py  generate_events.py  race_events.txt
src/: App.cpp  main.cpp  test_core.cpp
